kotlin/semlang-parser/src/test/semlang/validatorTests/fail/threadedTypes5.sem
struct IntStruct {
  value: Integer
}

// Incorrectly marks IntStruct as threaded
function increment(intStruct: ~IntStruct): Integer {
  Integer.plus(intStruct->value, Integer."1")
}
